# Automata

./: .gitignore  CMakeLists.txt  main.cpp
src/: Automaton.cpp  Automaton.h  CMakeLists.txt  DFAAutomaton.cpp  DFAAutomaton.h  test.cpp  test.h  util.cpp  util.h
test/: CMakeLists.txt
test/basic_tests/: CMakeLists.txt  basic_check.cpp
test/definitions_tests/: CMakeLists.txt  manual_DFA.cpp
test/dfa_tests/: CMakeLists.txt  automata_definitions.cpp  automata_definitions.h  dfa_definitions_test.cpp  dfa_functionality_test.cpp  dfa_toString_test.cpp  dfa_toTIKZcode_test.cpp
test/lib/googletest-release-1.8.0/googlemock/include/gmock/: gmock-actions.h  gmock-generated-function-mockers.h  gmock-spec-builders.h
test/lib/googletest-release-1.8.0/googlemock/test/: gmock-actions_test.cc  gmock-internal-utils_test.cc  gmock-matchers_test.cc  gmock-spec-builders_test.cc
test/lib/googletest-release-1.8.0/googletest/cmake/: internal_utils.cmake
test/lib/googletest-release-1.8.0/googletest/include/gtest/: gtest.h
test/lib/googletest-release-1.8.0/googletest/include/gtest/internal/: gtest-internal.h  gtest-port.h
test/lib/googletest-release-1.8.0/googletest/src/: gtest.cc
